...
                ),
              ],
            ),
            const SizedBox(height: 10),
            Text(
              formatter.format(totalSteps),
              key: const Key('steps_total_text'),
              style: const TextStyle(
                fontSize: 24,
                fontWeight: FontWeight.bold,
                color: Colors.white,
                letterSpacing: -0.5,
              ),
...
            Row(
              crossAxisAlignment: CrossAxisAlignment.baseline,
              textBaseline: TextBaseline.alphabetic,
              children: [
                Text(
                  widget.bpm != null ? '${widget.bpm}' : '--',
                  key: const Key('heart_rate_bpm_text'),
                  style: const TextStyle(
                    fontSize: 24,
                    fontWeight: FontWeight.bold,
                    color: Colors.white,
                    letterSpacing: -0.5,
                  ),
...
